samples/_failures_safe/1761317435_e7adfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e10a4f8.c: In function ‘main’:
./samples/SAFE/__tmp_2e10a4f8.c:157:9: error: expected expression at end of input
  157 |         if (from < 0 || from >= node_count || to < 0 || to >=
      |         ^~
./samples/SAFE/__tmp_2e10a4f8.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e10a4f8.c:157:9: error: expected declaration or statement at end of input
